# Otus-Cpp-2023-HW-6-Matrix

./: CMakeLists.txt  Matrix.h  main.cpp  main.h
.github/workflows/: release.yml
